@@ -2,6 +2,8 @@
  * #268: Override particular configuration options from the command-line via "--override" flag. See
    the documentation for more information:
    https://torsion.org/borgmatic/docs/how-to/make-per-application-backups/#configuration-overrides
+ * #270: Only trigger "on_error" hooks and monitoring failures for "prune", "create", and "check"
+   actions, and not for other actions.
  * When pruning with verbosity level 1, list pruned and kept archives. Previously, this information
    was only shown at verbosity level 2.
 
